web/themes/quartiers_solidaires/assets/components/molecules/nav/nav.scss
@charset 'utf-8';

// Navbar Toggle Button
.navbar-toggle {
  position: relative;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  width: $navbar-icon-size;
  height: $navbar-icon-size;
  min-width: initial;
  margin-bottom: ($grid-gutter-width-base / 2);
  padding: 0;
  color: $brand-primary;

  @include drop-shadow(bottom);

  &:hover:not(:active):not(.active) {
    color: $brand-primary;
  }

  // Small vertical dash below button
  &:after {
    content: '';
    position: absolute;
    top: 100%;
    left: 50%;
    transform: translateX(-50%);
    width: $border-width;
    height: ($grid-gutter-width-base / 2 + $border-width);
    background: $brand-primary;
  }

  @include icon-size(40px);

  // Handle icon animation on open
  .icon {
    transform: rotate(0deg);

    @include transition(transform 0.6s cubic-bezier(0.5, 0.53, 0.37, 0.94));
  }

  // With navbar open
  .open & {
    z-index: 10;

    .icon {
      transform: rotate(180deg);
    }
  }
}

// The whole navbar component
.navbar-container {
  position: relative;
  z-index: $zindex-navbar;
  display: flex;
  flex-direction: column;
  align-items: center;
}

// Three items always visible below navbar toggle
.navbar-filters {
  position: relative;
  border-radius: $btn-border-radius;

  .btn-primary {
    z-index: 10;

    &:active {
      transform: scale(1.05);
    }
  }
}

// Single item in navbar filters
.navbar-filter {
  position: absolute;
  top: 0;
  order: 0;
  z-index: 0;
  padding-right: $btn-padding-x / 1.5;
  padding-left: $btn-padding-x / 1.5;
  min-width: 0;
  border-color: $purple;

  &.active,
  &:active {
    background-color: $purple;
    border-color: $purple;
  }

  // First filter item (is actually the second in the markup)
  &:not(:last-of-type) {
    right: 100%;
    margin-right: -1.5rem;
    padding-right: 2rem;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  // Last filter item
  &:last-of-type {
    left: 100%;
    order: 2;
    margin-left: -1.5rem;
    padding-left: 2rem;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }

  // override focus effect to avoid ugly effect
  &:focus,
  &.focus {
    box-shadow: inset 0 0 0 2px lighten($btn-primary-border, 30%);
  }
}

.navbar-current {
  .open & {
    z-index: -1;
  }
}

// Navbar
/////////

.navbar {
  display: flex;
  position: absolute;
  z-index: 20;
  flex-direction: column;
  justify-content: space-between;
  height: 0;
  overflow: hidden;
  opacity: 0;
  margin-top: ($navbar-icon-size + $grid-gutter-width-base / 2 - $border-width);

  @include transition(
    height 0.3s ease 0.1s,
    opacity 0.145s ease
  );

  // Long vertical line drawn below items
  &:after {
    content: '';
    position: absolute;
    z-index: -1;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    width: $border-width;
    height: 0;
    background: $brand-primary;

    @include transition(height 0.1s ease-out);
  }

  // Styles of navbar when navbar is open
  .open & {
    opacity: 1;
    height: 80vh;

    @include transition(
      height 0s ease,
      opacity 0.3s ease
    );

    &:after {
      height: 100%;

      @include transition(height 0.34s ease-out);
    }
  }
}

// White overlay when navbar is open
.navbar-overlay {
  display: none;
  position: fixed;
  z-index: -1;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba($white, 0.8);

  .open & {
    display: block;
  }
}

// Navbar item, displayed as cards with size relative to screen (we expect 5 items)
.nav-item {
  display: flex;
  position: relative;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 15vh;
  height: 15vh;
  min-width: 100px;
  min-height: 100px;
  border-radius: $border-radius-lg;
  border: $border-width solid $brand-primary;
  padding-bottom: 2vh;
  font-weight: 600;

  @include transition(top 0.1s ease-out);

  @for $i from 2 through 5 {
    &:nth-child(#{$i}) {
      top: percentage(-0.08 * $i);
    }
  }

  @include button-variant($brand-primary, $brand-primary, $brand-primary);
  @include drop-shadow(bottom);
  @include icon-size(6vh, 38px);

  // Override background-color set in button variant
  background-color: $brand-primary-light;

  &:active,
  &.active,
  &:hover {
    text-decoration: none;

    &,
    svg {
      color: $white;
    }
  }

  &.active {
    z-index: 20;
  }

  &:active {
    transform: scale(0.95);
  }

  // Styles when navbar is open
  .open & {
    top: 0;

    @include transition(top 0.3s ease-out);
  }

  .icon {
    margin: auto 0;
  }
}

// Class `.open` is added to body when the navbar is open
// We avoid the body to scroll when navbar is open
body.open {
  max-height: 100vh;
  overflow: hidden;
}

